pocketbase setup and other minor changes

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-POCKETBASE=https://your-instance-name.pockethost.io/
+PB_INSTANCE=https://your-instance-name.pockethost.io/
+PB_AUTHTOKEN=your-auth-token
