--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vitest": "^2.0.4"
   },
   "dependencies": {
+    "mailersend": "^2.3.0",
     "pocketbase": "^0.22.1",
     "qrcode": "^1.5.4",
     "telegraf": "^4.16.3"
