--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PB_INSTANCE=https://your-instance-name.pockethost.io/
-PB_AUTHTOKEN=your-auth-token
 BOT_TOKEN=your-telegram-bot-token
+SMTP_HOST=your.smtp.host
+SMTP_PORT=smtp-port
+SMTP_USER=your@smtp.user
+SMTP_PSW=your-smtp-password
