--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mailersend": "^2.3.0",
     "nodemailer": "^6.9.16",
     "pocketbase": "^0.22.1",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "telegraf": "^4.16.3"
   }
