updated environment variables

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ SMTP_HOST=your.smtp.host
 SMTP_PORT=smtp-port
 SMTP_USER=your@smtp.user
 SMTP_PSW=your-smtp-password
+DATABASE_URL=postgres://user:password@host:port
+GOOGLE_CLIENT_ID=google-client-id
+GOOGLE_CLIENT_SECRET=google-client-secret
+ENV=production|development
