--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,5 @@ SMTP_PSW=your-smtp-password
 DATABASE_URL=postgres://user:password@host:port
 GOOGLE_CLIENT_ID=google-client-id
 GOOGLE_CLIENT_SECRET=google-client-secret
+GOOGLE_CALLBACK_URL=https://hostname/login/callback
 ENV=production|development
