--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "coverage": "vitest --coverage",
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx ./src/lib/server/scripts/seeding.ts"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
@@ -27,7 +28,7 @@
     "drizzle-kit": "^0.31.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "tsx": "^4.19.3",
+    "tsx": "^4.19.4",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
     "vitest": "^2.0.4"
